[tool.poetry]
name = "inquirer"
version = "3.0.0"
description = "Collection of common interactive command line user interfaces, based on Inquirer.js"
authors = ["Miguel Ángel García <miguelangel.garcia@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/magmax/python-inquirer"
repository = "https://github.com/magmax/python-inquirer"
documentation = "https://magmax.org/python-inquirer"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[tool.poetry.dependencies]
# <4.0 necessary to be able to resolve urllib3 and be able to use a safe version
python = ">=3.8,<4.0"
blessed = ">=1.19.0"
readchar = ">=3.0.6"
python-editor = ">=1.0.4"

[tool.poetry.dev-dependencies]
bandit = ">=1.7.4"
flake8 = ">=4.0.1,<6.0.0"
flake8-docstrings = ">=1.6.0"
furo = ">=2022.9.29"
isort = ">=5.10.1"
pexpect = ">=4.8.0"
pre-commit = ">=2.17.0"
pre-commit-hooks = ">=4.3.0"
pyupgrade = ">=2.31.1"
safety = ">=2.3.1"
sphinx = ">=5.3.0"
sphinx-autobuild = ">=2021.3.14"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["inquirer", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 97

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
